# ticktick-python-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  openapi.yaml  pyproject.toml
.github/workflows/: ci.yml
examples/: bulk_operations.py  daily_review.py  quick_start.py
tests/: test_client.py  test_managers.py  test_models.py
ticktick_sdk/: __init__.py  client.py  exceptions.py  models.py
ticktick_sdk/managers/: batch.py  column.py  filter.py  habit.py  project.py  search.py  tag.py  task.py  user.py
